# Director

./: .gitignore  Makefile  README.md  docker-compose.yml  mkdocs.yml  render.yaml  setup.sh
backend/: .dockerignore  .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/director/: handler.py
backend/director/agents/: index.py  profanity_remover.py  prompt_clip.py  sample.py  slack_agent.py  subtitle.py  upload.py
backend/director/core/: reasoning.py
backend/director/db/: __init__.py  base.py
backend/director/entrypoint/api/: routes.py
backend/director/llm/: openai.py
backend/director/spielberg/agents/: slack_agent.py  upload.py  video_summary.py
backend/director/spielberg/llm/: base.py
backend/director/tools/: replicate.py  videodb_tool.py
backend/director/utils/: exceptions.py
backend/spielberg/: constants.py  handler.py
backend/spielberg/agents/: base.py  brandkit.py  download.py  image_generation.py  index.py  pricing.py  profanity_remover.py  prompt_clip.py  sample.py  search.py  slack_agent.py  stream_video.py  subtitle.py  subtitle2.py  summary.py  thumbnail.py  upload.py  video_summary.py
backend/spielberg/core/: reasoning.py  session.py
backend/spielberg/db/: __init__.py  base.py
backend/spielberg/db/sqlite/: db.py  initialize.py
backend/spielberg/entrypoint/api/: __init__.py  errors.py  routes.py  server.py  (+1 more)
backend/spielberg/llm/: anthropic.py  base.py  openai.py
backend/spielberg/tools/: replicate.py  slack.py  videodb_tool.py
backend/spielberg/utils/: exceptions.py
(+75 files in other folders)
